; ModuleID = '/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkj4a/j4a/class/tv/danmaku/ijk/media/player/misc/extr_IMediaDataSource.c_J4AC_tv_danmaku_ijk_media_player_misc_IMediaDataSource__readAt__catchAll.c'
source_filename = "/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkj4a/j4a/class/tv/danmaku/ijk/media/player/misc/extr_IMediaDataSource.c_J4AC_tv_danmaku_ijk_media_player_misc_IMediaDataSource__readAt__catchAll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @J4AC_tv_danmaku_ijk_media_player_misc_IMediaDataSource__readAt__catchAll(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %15 = load i32*, i32** %8, align 8
  %16 = load i32, i32* %9, align 4
  %17 = load i32, i32* %10, align 4
  %18 = load i32, i32* %11, align 4
  %19 = load i32, i32* %12, align 4
  %20 = load i32, i32* %13, align 4
  %21 = call i32 @J4AC_tv_danmaku_ijk_media_player_misc_IMediaDataSource__readAt(i32* %15, i32 %16, i32 %17, i32 %18, i32 %19, i32 %20)
  store i32 %21, i32* %14, align 4
  %22 = load i32*, i32** %8, align 8
  %23 = call i64 @J4A_ExceptionCheck__catchAll(i32* %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %26

25:                                               ; preds = %6
  store i32 0, i32* %7, align 4
  br label %28

26:                                               ; preds = %6
  %27 = load i32, i32* %14, align 4
  store i32 %27, i32* %7, align 4
  br label %28

28:                                               ; preds = %26, %25
  %29 = load i32, i32* %7, align 4
  ret i32 %29
}

declare dso_local i32 @J4AC_tv_danmaku_ijk_media_player_misc_IMediaDataSource__readAt(i32*, i32, i32, i32, i32, i32) #1

declare dso_local i64 @J4A_ExceptionCheck__catchAll(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
